--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Lobby",
     "short_name": "Lobby",
-    "start_url": "/",
+    "start_url": "/teste-PWA/index.html",
     "display": "standalone",
     "theme_color": "#000",
     "background_color": "#fff",
